syntax = "proto3";

package grpc.model;

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  preserve_unknown_fields: false
};
message Error{
  int32 status = 1;
  string msg = 2;
}
message User {
  int32 id = 1;
  string name = 2;
}

message ListUserRequest {
  optional string name = 1;
}

message ListUserResponse {
    repeated User users = 1;
    optional Error error = 2;
}
service UserManager {
  rpc GetUsers (ListUserRequest) returns (ListUserResponse) {}
}